# gueepo2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
.github/workflows/: build.yml  engine_build.yml
branding/: gueepo2D.psd
gueepo2D/: gueepo2D.lua  gueepo2D_tests.lua  sandbox.lua
gueepo2D/engine/: CMakeLists.txt  Main.cpp  gueepo2Dpch.cpp  gueepo2Dpch.h  gueepo2d.h
gueepo2D/engine/core/: Application.cpp  Application.h  Common.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Log.cpp  Log.h  TimeStep.h  Window.h  macos_common.h
gueepo2D/engine/core/Containers/: String.cpp  String.h  hashed_string.cpp  hashed_string.h  string.cpp  string.h  vector.h
gueepo2D/engine/core/Debug/: MemoryTracker.cpp  MemoryTracker.h  Profiler.h
gueepo2D/engine/core/GameObject/: BoxCollider.h  Component.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  SpriteComponent.cpp  SpriteComponent.h  TilemapComponent.h  TransformComponent.h
gueepo2D/engine/core/ResourceManager/: ResourceManager.cpp  ResourceManager.h
gueepo2D/engine/core/audio/: Audio.cpp  Audio.h
gueepo2D/engine/core/containers/: hashed_string.h  string.cpp  string.h
gueepo2D/engine/core/events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
gueepo2D/engine/core/filesystem/: File.cpp  File.h  Filesystem.cpp  Filesystem.h  Font.cpp  Font.h  json.cpp  json.h
gueepo2D/engine/core/input/: ControllerCodes.h  Input.cpp  Input.h  KeyboardCodes.h  MouseCodes.h
gueepo2D/engine/core/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
gueepo2D/engine/core/math/: Math.h  Matrix4.cpp  Matrix4.h  Random.cpp  Random.h  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  endian.h  mat4.cpp  mat4.h  math.h  rand.cpp  rand.h  rect.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
gueepo2D/engine/core/physics/: CollisionWorld.cpp  CollisionWorld.h  LineSegment.cpp  LineSegment.h
gueepo2D/engine/core/renderer/: BufferLayout.h  Color.h  FontSprite.cpp  FontSprite.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  OrtographicCamera.cpp  OrtographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SpriteBatcher.cpp  SpriteBatcher.h  Target.cpp  Target.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
gueepo2D/engine/core/ui/: Container.cpp  Container.h  Control.h  Label.cpp  Label.h  PixelPanel.cpp  PixelPanel.h  UIManager.cpp  UIManager.h
gueepo2D/engine/platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTarget.cpp  OpenGLTarget.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  imgui_impl_opengl3.cpp
gueepo2D/engine/platform/SDL2/: SDL2Input.cpp  SDL2Input.h  SDL2TimeStep.cpp  SDL2Window.cpp  SDL2Window.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
gueepo2D/engine/utils/: ImageUtils.cpp  ImageUtils.h  JsonHelper.cpp  JsonHelper.h  PixelBuffer.cpp  PixelBuffer.h  README.md  ResourceManager.cpp  ResourceManager.h  SpriteAnimation.cpp  SpriteAnimation.h  TextureRegion.cpp  TextureRegion.h  Tilemap.cpp  Tilemap.h
gueepo2D/sandbox/: Broughlike.cpp  Broughlike.h  CMakeLists.txt  GameObject.h  Main.cpp  PixelSandbox.cpp  PixelSandbox.h  Sandbox.cpp  Sandbox.h  TileComponent.h  imgui.ini
gueepo2D/sandbox/assets/: myJson.json
gueepo2D/sandbox/assets/shaders/: font.fragment  font.vertex  sprite.fragment  sprite.vertex
gueepo2D/test/: CMakeLists.txt  TestUtils.h  all_tests.cpp  gueepo_vector.h  json.h  sanity_check.cpp  vector2.h  vector3.h
premake/: README.md
scripts/: genproj_gmake2.bat  genproj_vs2019.bat
